updated .gitignore file

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,2 @@
-JIRA_EMAIL=ayusha.ghosh@cognizant.com
-JIRA_API_TOKEN=ATATT3xFfGF0Fr4-VC45Jhg-lUbz0nD7HZ1RLJhc9oixSLDQG99_x5AOUHPfHDo3VCecjHlivLrlOz39EhbVBb4ebQXVzh_6DQ0mlRHZB-nHF9Aumzc-QivWuWsbI1DKqTe3GcpilE4wXa50rrnkFyEOlSHnK0BESUjHp-Zca3BAWAv0-UnnUiU=5A4C1149
-OPENAI_API_KEY=sk-4d1b2c0f-3e6f-4a5c-bb8d-7c9e0f8a1b2c
+JIRA_EMAIL={email}
+JIRA_API_TOKEN={api_token}
